--- a/rootdir/etc/ueventd.rc
+++ b/rootdir/etc/ueventd.rc
@@ -413,3 +413,7 @@ firmware_directories /vendor/firmware_mnt/image/
 /sys/class/kgsl/kgsl-3d0    force_bus_on             0664    root  system
 /sys/class/kgsl/kgsl-3d0    force_clk_on             0664    root  system
 /sys/class/kgsl/kgsl-3d0    bus_split                0664    root  system
+
+# Charger
+/sys/class/power_supply/battery  battery_charging_enabled   0660    system  system
+/sys/class/power_supply/battery  input_suspend              0660    system  system
