--- a/rro_overlay/WifiOverlay/AndroidManifest.xml
+++ b/rro_overlay/WifiOverlay/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="30"
-    android:versionName="11"
-    coreApp="true"
-    package="com.android.wifi.resources.overlay.common">
+    package="com.android.wifi.resources.lge_sdm845"
+    android:versionCode="1"
+    android:versionName="1.0">
     <application android:hasCode="false" />
     <overlay
         android:targetPackage="com.android.wifi.resources"
         android:targetName="WifiCustomization"
-        android:isStatic="true" />
+        android:isStatic="true"
+        android:priority="0"/>
 </manifest>
